# Web-Wrapper

./: LICENSE  README.md  local.properties  settings.gradle.kts
.github/workflows/: main.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image_processor.cpp  native-lib.cpp  url_validator.cpp
app/src/main/java/com/nan/webwrapper/: AddWebsiteActivity.kt  CacheManager.kt  CircleGestureDetector.kt  FaviconFetcher.kt  HistoryAdapter.kt  HistoryEntry.kt  HistoryRepository.kt  MainActivity.kt  NativeHelper.kt  PatternLockActivity.kt  PatternLockManager.kt  PatternLockView.kt  SettingsActivity.kt  SettingsAdapter.kt  SettingsRepository.kt  SwipeHomeGestureDetector.kt  TwoFingerPullDownDetector.kt  TwoFingerSwipeRightDetector.kt  WebViewActivity.kt  (+2 more)
app/src/main/res/anim/: activity_close_enter.xml  activity_close_exit.xml  activity_open_enter.xml  activity_open_exit.xml
app/src/main/res/drawable/: circular_logo_background.xml  ic_add_24.xml  ic_back_24.xml  ic_delete_24.xml  ic_edit_24.xml  ic_github_24.xml  ic_launcher_foreground.xml  ic_link_24.xml  ic_search_24.xml  ic_settings_24.xml
app/src/main/res/layout/: activity_add_website.xml  activity_main.xml  activity_pattern_lock.xml  activity_settings.xml  activity_webview.xml  dialog_edit_history.xml  item_history.xml  item_website_settings.xml  widget_webwrapper.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml  window_animations.xml
app/src/main/res/xml/: webwrapper_widget_info.xml
